--- a/style/style.css
+++ b/style/style.css
@@ -175,7 +175,8 @@ footer a {
     clear: both;
     display: block;
     margin: 0 auto;
-    width: 60vw;    padding: 20px;
+    width: 60vw;
+    padding: 20px;
   }
 
   section {
