--- a/styles/about.css
+++ b/styles/about.css
@@ -14,3 +14,68 @@ header {
 #samenwerking p{
   font-size: 1.2em;
 }
+#header-overons{
+  font-size: 4em;
+  letter-spacing: 10px;
+  padding-right: 50px;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin-top:150px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+
+}
+
+#slogan-overons{
+  font-size: 8em;
+  letter-spacing: 10px;
+  padding-right: 30px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-top:20px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+
+#title-overons{
+  font-size:5.5em;
+  margin-top:0px;
+
+}
+
+
+  @media screen and (min-width:768px) and (max-width:1023px) {
+
+#slogan-overons{
+  font-size:5em;
+  margin:0 auto;
+}
+#title-overons{
+  font-size:3.6em;
+    margin:0 auto;
+}
+#header-overons{
+  font-size: 2.5em;
+
+
+}
+
+}
+
+@media screen and (max-width: 768px) {
+  #slogan-overons{
+    font-size:2em;
+    margin:0 auto;
+  }
+  #title-overons{
+    font-size:2em;
+    margin:0 auto;
+  }
+
+  #header-overons{
+    font-size: 1em;
+
+
+
+
+  }
