--- a/styles/contact.css
+++ b/styles/contact.css
@@ -18,3 +18,11 @@ input{
     margin: 8px 0;
     box-sizing: border-box;
 }
+address{
+  text-align: right;
+}
+@media screen and (max-width: 768px) {
+  address{
+    text-align: left;
+  }
+}
