--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,31 @@ header {
   min-height: 830px;
 }
 
-.driedeling-blok{
-  min-height: 700px;
+
+@media (min-width: 576px) {
+  #drieling {
+    height: 850px;
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 768px) {
+  #drieling {
+    height: 900px;
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 992px) {
+  #drieling {
+    height: 850px;
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 1200px) {
+  #drieling {
+    height: 800px;
+    overflow: hidden;
+  }
 }
