--- a/styles/style.css
+++ b/styles/style.css
@@ -136,7 +136,7 @@ h3{
   background: transparent;
   border: 2px solid white;
   color: white;
-  margin: 50px;
+  margin-bottom: 50px;
 }
 
 .btn-driedeling:hover {
@@ -175,6 +175,7 @@ p {
   text-align: center;
   background-image: url(../img/Robotacademie_0072.jpg);
   background-position: center;
+  background-repeat: no-repeat;
   color: white;
   margin-bottom: 100px;
   padding: 0px;
@@ -187,7 +188,7 @@ p {
 
 #werkgever-col {
   background: rgba(50, 153, 154, 0.4);
-  height: 750px;
+  height: 1000px;
 }
 
 #werkgever-col:hover {
@@ -196,7 +197,7 @@ p {
 
 #cursist-col {
   background: rgba(241, 128, 57, 0.4);
-    height: 750px;
+    height: 1000px;
 }
 
 #cursist-col:hover {
@@ -205,7 +206,7 @@ p {
 
 #robot-col {
   background: rgba(126, 122, 120, 0.4);
-    height: 750px;
+    height: 1000px;
 }
 
 #robot-col:hover {
