--- a/styles/contact.css
+++ b/styles/contact.css
@@ -4,6 +4,23 @@ header {
     background-size: cover;
   }
 
+  @media (min-width: 576px) {
+
+  }
+
+  @media (min-width: 768px) {
+
+  }
+
+  @media (min-width: 992px) {
+
+  }
+
+  @media (min-width: 1200px) {
+
+  }
+
+
 #contact-row{
   margin-top: 0px;
 }
