--- a/styles/cursus.css
+++ b/styles/cursus.css
@@ -3,6 +3,23 @@
     height: 550px;
     background-size: cover;
   }
+
+  @media (min-width: 576px) {
+
+  }
+
+  @media (min-width: 768px) {
+
+  }
+
+  @media (min-width: 992px) {
+
+  }
+
+  @media (min-width: 1200px) {
+
+  }
+
   #cursussen-text{
       width:80%;
       margin:0 auto;
