--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,6 @@ h3{
 }
 
 #logo-header {
-  margin-left: 100px;
   height: 50px;
 }
 
@@ -242,6 +241,29 @@ p {
   color: white;
   font-size: .8em;
 }
+@media (min-width: 576px) {
+  #logo-header {
+    margin-left: 100px;
+  }
+}
+
+@media (min-width: 768px) {
+  #logo-header {
+    margin-left: 100px;
+  }
+}
+
+@media (min-width: 992px) {
+  #logo-header {
+    margin-left: 100px;
+  }
+}
+
+@media (min-width: 1200px) {
+  #logo-header {
+    margin-left: 100px;
+  }
+}
 
 @media screen and (min-width:768px) and (max-width:1023px) {
   #header-text {
@@ -265,6 +287,15 @@ p {
 }
 
 @media screen and (max-width: 768px) {
+  #logo-header {
+    margin-left: 30px;
+  }
+  .navbar-toggle{
+    margin-right: 30px;
+  }
+  .navbar-collapse{
+    margin-top: 60px;
+  }
   #header-text {
     text-align: center;
     margin-top: 20vh;
