--- a/styles/index.css
+++ b/styles/index.css
@@ -33,3 +33,10 @@ header {
     overflow: hidden;
   }
 }
+@media screen and (max-width: 768px) {
+  .btn-header{
+    /* background-color: red; */
+    margin-top: 30px;
+    margin-bottom: 0px;
+  }
+  }
