--- a/styles/contact.css
+++ b/styles/contact.css
@@ -29,12 +29,16 @@ header {
 height: 300px;
 }
 
-input{
+input,select{
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
 }
+#sendbtn{
+  margin: 100px;
+}
+
 address{
   text-align: right;
 }
