--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 header {
-  background-image: url("../img/header-color.png");
+  background-image: url("../img/home-header.jpg");
   background-position: bottom;
   height: 135vh;
   min-height: 830px;
@@ -40,6 +40,6 @@ header {
     margin-bottom: 0px;
   }
   header {
-    height: 150vh;
+    height: 140vh;
   }
   }
