--- a/styles/about.css
+++ b/styles/about.css
@@ -20,79 +20,111 @@ header {
   }
 
 
-#samenwerking{
-  margin: 100px 0px;
-  background-image: url(../img/overons-horizontal.jpg);
-  background-color: red;
-  width: 100%;
-  color: white;
-}
-#samenwerking p{
-  font-size: 1.2em;
-}
-#header-overons{
-  font-size: 4em;
-  letter-spacing: 10px;
-  padding-right: 50px;
-  text-transform: uppercase;
-  font-weight: 500;
-  margin-top:150px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-
-}
-
-#slogan-overons{
-  font-size: 8em;
-  letter-spacing: 10px;
-  padding-right: 30px;
-  text-transform: uppercase;
-  font-weight: 600;
-  margin-top:20px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-}
-
-#title-overons{
-  font-size:5.5em;
-  margin-top:0px;
-
-}
-
-
-  @media screen and (min-width:768px) and (max-width:1023px) {
-
-#slogan-overons{
-  font-size:2em;
-  margin:0 auto;
-}
-#title-overons{
-  font-size:3.6em;
-    margin:0 auto;
-}
-#header-overons{
-  font-size: 2.5em;
-}
-
-}
-
-@media screen and (max-width: 768px) {
-#header-text{
-      margin: 0 auto;
-      text-align: center;
-    }
-    #slogan-overons{
-      font-size:2em;
-      margin:0 auto;
-    }
-    #title-overons{
-      font-size:2em;
-      margin:0 auto;
-    }
-
-    #header-overons{
-      font-size: 1em;
-      margin-bottom:20px;
-      letter-spacing: 5px;
+  #samenwerking{
+    margin: 100px 0px;
+    background-image: url(../img/overons-horizontal.jpg);
+    background-color: red;
+    width: 100%;
+    color: white;
   }
+  #samenwerking p{
+    font-size: 1.2em;
+  }
+
+  #header-text {
+    color: white;
+    text-align: center;
+    margin-top: 10vh;
+  }
+
+  #text-overons{
+    font-size: 5em;
+    margin-top: 0px;
+    margin-bottom: 35px;
+    padding-top: 0px;
+    line-height: 140px;
+    font-weight: 400;
+  }
+
+  #slogan-overons{
+    font-size:9em;
+    margin-top: 0px;
+    margin-bottom: 35px;
+    padding-top: 0px;
+    line-height: 140px;
+    font-weight: 700;
+  }
+
+  #title-overons{
+    font-size: 6em;
+    margin-top: 0px;
+    margin-bottom: 35px;
+    padding-top: 0px;
+    line-height: 140px;
+    font-weight: 400;
+
+  }
+
+
+    @media screen and (min-width:768px) and (max-width:1023px) {
+
+      #text-overons{
+        font-size: 5em;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding-top: 0px;
+        line-height: 140px;
+        font-weight: 400;
+      }
+
+      #slogan-overons{
+        font-size: 6em;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding-top: 0px;
+        line-height: 140px;
+        font-weight: 700;
+      }
+
+      #title-overons{
+        font-size: 4em;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding-top: 0px;
+        line-height: 140px;
+        font-weight: 400;
+
+      }
+
+  }
+
+  @media screen and (max-width: 768px) {
+
+    #text-overons{
+      font-size: 3em;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      padding-top: 0px;
+      line-height: 140px;
+      font-weight: 400;
+    }
+
+    #slogan-overons{
+      font-size: 4em;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      padding-top: 0px;
+      line-height: 140px;
+      font-weight: 700;
+    }
+
+    #title-overons{
+      font-size: 4em;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      padding-top: 0px;
+      line-height: 140px;
+      font-weight: 400;
+
+    }
   }
