--- a/styles/cursus.css
+++ b/styles/cursus.css
@@ -1,5 +1,5 @@
   header {
-    background-image: url(../img/banners/banner_6.jpg);
+    background-image: url(../img/banners/banner4.jpg);
     height: 550px;
     background-size: cover;
   }
