--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,5 +1,5 @@
 header {
-    background-image: url("../img/banners/banner_1.jpg");
+    background-image: url("../img/banners/banner2.jpg");
     height: 550px;;
     background-size: cover;
   }
