--- a/styles/about.css
+++ b/styles/about.css
@@ -125,6 +125,8 @@ header {
       padding-top: 0px;
       line-height: 140px;
       font-weight: 400;
-
+    }
+    header{
+      height: 160vh;
     }
   }
