--- a/styles/about.css
+++ b/styles/about.css
@@ -101,20 +101,12 @@ header {
   @media screen and (max-width: 768px) {
 
     #text-overons{
-      font-size: 3em;
-      margin-top: 0px;
-      margin-bottom: 0px;
-      padding-top: 0px;
-      line-height: 140px;
+      font-size: 2em;
       font-weight: 400;
     }
 
     #slogan-overons{
-      font-size: 4em;
-      margin-top: 0px;
-      margin-bottom: 0px;
-      padding-top: 0px;
-      line-height: 140px;
+      font-size: 30px;
       font-weight: 700;
     }
 
