--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,9 @@ h3{
 h4{
   font-size: 2em;
 }
+.title{
+  font-weight: 700;
+}
 
 #brand-name{
   color: white;
@@ -97,15 +100,6 @@ h4{
   margin-bottom: 0px;
   padding-bottom: 0px;
   font-style: italic;
-}
-
-#title {
-  font-size: 10em;
-  margin-top: 0px;
-  margin-bottom: 35px;
-  padding-top: 0px;
-  line-height: 140px;
-  font-weight: 700;
 }
 #intro-text{
   font-size: 1.5em;
@@ -270,6 +264,9 @@ p {
   #logo-header {
     margin-left: 100px;
   }
+  .title{
+    font-size: 8em;
+  }
 }
 
 @media screen and (min-width:768px) and (max-width:1023px) {
@@ -280,16 +277,15 @@ p {
   #slogan {
     font-size: 3em;
   }
-  #title {
-    font-size: 7em;
-    margin-top: 0px;
-    line-height: 80px
-  }
   #inleiding {
     width: 1200px;
     margin: 0 auto;
     font-size: .7em;
     width: 700px;
+  }
+  .title{
+    font-size: 5em;
+    font-weight: 700;
   }
 }
 
@@ -310,6 +306,9 @@ p {
   .navbar-header{
     width: 100%;
   }
+  .title{
+    font-size: 4em;
+  }
 
   #header-text {
     text-align: center;
@@ -317,11 +316,6 @@ p {
   }
   #slogan {
     font-size: 2em;
-  }
-  #title {
-    font-size: 5em;
-    margin-top: 0px;
-    line-height: 80px
   }
   #intro-text{
     font-size: 1em;
