--- a/styles/style.css
+++ b/styles/style.css
@@ -277,6 +277,9 @@ p {
     margin: 0 auto;
     width: 700px;
   }
+  header{
+    height: 130vh;
+  }
 }
 
 @media screen and (min-width:768px) and (max-width:1199px) {
