--- a/styles/about.css
+++ b/styles/about.css
@@ -1,7 +1,8 @@
 header {
-    background-image: url("../img/overons.jpg");
-    height: 150vh;
+    background-image: url("../img/banners/banner1.jpg");
+    height: 550px;
     background-size: cover;
+    background-position: center;
   }
   @media (min-width: 576px) {
 
